--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -26,6 +26,8 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Run tests
-      run: |
-        python -m unittest discover tests
+    -  name: Run tests
+       run: |
+         python -m unittest discover tests
+         exit 1  # <- This line forces the workflow to fail
+
